
Dingus small rare developments
========
060216: Fix some mouse capture issues in GUI code.
060212: Migrated to VS.NET2003 (finally!), VC6 support may break at any
		time. Major cleanup of warnings. Removed old unused code
		(collision, physics, visibility).
		

Dingus tag 051101
========

051031: Texture/CubeTexture bundles can load .hdr images.
		CubeTexture bundle now supports loading cubemaps from vertical
		cross format.
051020: CRenderableQuad added, now drawing fullscreen postprocessing
		quads is much simpler. System now resets cached D3D stuff every
		frame; fixes some weird behavior with rendertargets (e.g. if the
		last rendertarget you render to is not backbuffer).
051017: CVertexFormat::calc[Normal/Tangent/Binorm]Offset added.
		CScreenBasedDivTextureCreator added - creates texture proportional
		to backbuffer (first BB size is made divisible by supplied amount).
		DINGUS_REGISTER_STEX_SURFACE helped macro added.
051015: CUIRollout::addChildControl()/offsetPos() added.
051011: CUIDialog::renderBegin()/renderEnd() added.
051001: Effects are checked for valid/missing state assignments (as
		required for the state restore system to work). For example,
		if you don't set SrcBlend when turning on alpha blending,
		the engine will complain.
050930: CStringHelper::countLines added.
050927: Big good change: if effects don't contain state restoring pass
		(PLast), it is automatically generated by the engine. In this
		case, you need to call setStatesConfig() on EffectBundle at
		init time, supplying script that contains knowledge of restored
		states; and use RESTORE_PASS macro in the effect file. More to
		be doc'd at dingus.berlios.de really soon now.
050925: gfx/gui/Gui.cpp fix to make it compile with VC7.1.
050917: Factored out sprite/text functions from GUI for more convenient
		immediate mode calling. getX()/getY() added to CUIDialog.
050628: Texture bundle always takes miplevels from file for DDS textures