@@ -11,16 +11,16 @@ void gfx::textureProjectionWorld( const SMatrix4x4& projectorMatrix, float texX,
 {
     // | -0.5     0        0        0 |
     // | 0        0.5      0        0 |
-    // | 0        0        0        0 |
-    // | 0.5      0.5      1        1 |
+    // | 0        0        1        0 |
+    // | 0.5      0.5      0        1 |
 	SMatrix4x4 matTexScale;
 	matTexScale.identify();
 	matTexScale._11 = 0.5f;
 	matTexScale._22 = -0.5f;
-	matTexScale._33 = 0.0f;
+	matTexScale._33 = 1.0f;
 	float xo =  0.5f / texX;
 	float yo =  0.5f / texY;
-	matTexScale.getOrigin().set( 0.5f + xo, 0.5f + yo, 1.0f );
+	matTexScale.getOrigin().set( 0.5f + xo, 0.5f + yo, 0.0f );
 
 	dest = projectorMatrix * matTexScale;
 }
@@ -30,16 +30,16 @@ void gfx::textureProjectionView( const SMatrix4x4& renderCameraMatrix, const SMa
 {
     // | -0.5     0        0        0 |
     // | 0        0.5      0        0 |
-    // | 0        0        0        0 |
-    // | 0.5      0.5      1        1 |
+    // | 0        0        1        0 |
+    // | 0.5      0.5      0        1 |
 	SMatrix4x4 matTexScale;
 	matTexScale.identify();
 	matTexScale._11 = 0.5f;
 	matTexScale._22 = -0.5f;
-	matTexScale._33 = 0.0f;
+	matTexScale._33 = 1.0f;
 	float xo =  0.5f / texX;
 	float yo =  0.5f / texY;
-	matTexScale.getOrigin().set( 0.5f + xo, 0.5f + yo, 1.0f );
+	matTexScale.getOrigin().set( 0.5f + xo, 0.5f + yo, 0.0f );
 
 	dest = renderCameraMatrix * projectorMatrix * matTexScale;
 }
